CSS FlatSIS fix calendar menu text wrapping

--- a/assets/themes/FlatSIS/css/stylesheet.css
+++ b/assets/themes/FlatSIS/css/stylesheet.css
@@ -1391,7 +1391,7 @@ div.st {
 	display: inline-block
 }
 
-.calendar-menu {
+td.calendar-menu {
 	white-space: normal;
 	max-width: none
 }
